<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_gravity="center"
    android:paddingTop="14dip"
    android:paddingBottom="14dip"
    android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"/>

    <EditText
        android:textSize="20sp"
        android:layout_marginTop="14dip"
        android:paddingEnd="4dip"
        android:paddingStart="4dip"
        android:paddingTop="4dip"
        android:paddingBottom="4dip"
        android:hint="@string/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dip"
        android:layout_marginEnd="14dip"
        android:background="#EEEEEE"/>
    <EditText
        android:textSize="20sp"
        android:layout_marginTop="7dip"
        android:paddingEnd="4dip"
        android:paddingStart="4dip"
        android:paddingTop="4dip"
        android:paddingBottom="4dip"
        android:hint="@string/Contributors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dip"
        android:layout_marginEnd="14dip"
        android:background="#EEEEEE"/>
    <EditText
        android:textSize="20sp"
        android:layout_marginTop="7dip"
        android:paddingEnd="4dip"
        android:paddingStart="4dip"
        android:paddingTop="4dip"
        android:paddingBottom="4dip"
        android:hint="@string/Catagory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dip"
        android:layout_marginEnd="14dip"
        android:background="#EEEEEE"/>

    <TextView
        android:gravity="center"
        android:paddingStart="60dip"
        android:paddingEnd="60dip"
        android:layout_marginTop="20dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DETAILS"/>




</LinearLayout>
</android.support.v7.widget.CardView>