<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="vertical">


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/barToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="7dp"
                    android:text="@string/Previous"
                    android:textColor="@color/main"
                    android:textSize="15.5sp" />

                <ImageView
                    android:layout_width="100dip"
                    android:layout_height="50dip"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/logo_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:text="@string/Next"
                    android:textColor="@color/main"
                    android:textSize="15.5sp" />
            </RelativeLayout>


        </android.support.design.widget.AppBarLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dip"
                android:text="Create Idea"
                android:textColor="#000000"
                android:textSize="27sp" />

            <TextView

                android:id="@+id/idea_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="right"
                android:layout_marginEnd="7dp"
                android:background="@drawable/button"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:paddingEnd="4dip"
                android:paddingTop="2dip"
                android:paddingBottom="2dip"
                android:paddingStart="9dip"
                android:text="@string/app_name"
                android:textColor="@color/white" />
        </RelativeLayout>

        <EditText
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dip"
            android:layout_marginStart="5dip"
            android:layout_weight="2"
            android:background="@drawable/edittectbox"
            android:gravity="start"
            android:hint="@string/app_name"
            android:paddingStart="9dip"
            android:paddingTop="15dip" />


        <android.support.design.widget.FloatingActionButton
            android:layout_marginTop="14dip"
            android:id="@+id/floatingActionButton"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:elevation="7dip"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_mic"
            android:scaleType="center"
            />

        <LinearLayout
            android:layout_marginBottom="15dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dip"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dip"
                android:layout_weight="3"
                android:background="@drawable/button"
                android:text="Save Idea"
                android:textColor="@color/main" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="15dip"
                android:layout_marginTop="5dip"
                android:layout_weight="3"
                android:background="@drawable/button"
                android:text="Pulish Idea"
                android:textColor="@color/main" />


        </LinearLayout>

    </LinearLayout>

</FrameLayout>